--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,300&display=swap');
+
 .header {
   display: flex;
   background-color: #1f2937;
@@ -18,6 +20,19 @@
   margin-left: 50px;
 }
 
+.first {
+  display: flex;
+  background-color: #1f2937;
+  margin: 0;
+  height: 400px;
+}
+
+.hero-main-text {
+  font-size: 48px;
+  font-weight: 900;
+  color: #f9faf8;
+}
+
 a {
   text-decoration: none;
   color: #e5e7eb;
@@ -26,5 +41,6 @@ a {
 
 body {
   margin: auto;
-  font-family: Roboto, Helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
+
