--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,10 @@
   background-color: #1f2937;
   align-items: center;
   white-space: nowrap;
-  justify-content: space-between;
+  justify-content: center;
 }
 
-
 .header-links {
-  margin-right: 425px;
   display: flex;
   font-size: 18px;
   list-style-type: none;
@@ -21,7 +19,7 @@
   font-size: 24px;
   font-weight: bold;
   color: #f9faf8;
-  margin-left: 435px;
+  margin-right: 435px;
 }
 
 .container-one{
@@ -75,6 +73,81 @@
   border-radius: 10px;
   padding: 10px 35px;
   font-weight: 550;
+}
+
+/* Second Div */
+.second-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.second-div-child {
+  height: 400px;
+  width: 900px;
+  padding-bottom: 100px;
+}
+
+.box {
+  border: 3px solid #3882f6;
+  height: 164px;
+  width: 164px;
+  border-radius: 20px;
+}
+
+.boxes {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+}
+
+.boxes-text {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+}
+
+.box-text {
+  font-size: 18px;
+  color: darkslategray;
+  width: 170px;
+  text-align: center;
+}
+
+.info-text {
+  text-align: center;
+  font-size: 36px;
+  font-weight: 900;
+  color: #1f2937;
+}
+
+/* Third Div */
+.third-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 400px;
+  background-color: #e5e7eb;
+}
+
+.third-div-child {
+  width: 790px;
+}
+
+.italic-text {
+  font-size: 36px;
+  font-weight: 300;
+  font-style: italic;
+  color: #1f2937;
+  margin-bottom: 0%;
+}
+
+.thor-text {
+  font-weight: 800;
+  font-size: 18px;
+  color: #1f2937;
+  margin-top: 0%;
+  padding-inline-start: 550px;
 }
 
 a {
