--- a/styles.css
+++ b/styles.css
@@ -150,6 +150,67 @@
   padding-inline-start: 550px;
 }
 
+/* Fourth Div */
+.fourth-div {
+  display: flex;
+  height: 400px;
+  justify-content: center;
+  align-items: center;
+}
+
+.fourth-div-child {
+  background-color: #3882f6;
+  width: 1000px;
+  height: 150px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text-and-button {
+  display: flex;
+  width: 800px;
+  height: 50px;
+}
+
+.big-text {
+  font-size: 24px;
+  color: #f9faf8;
+  margin: auto;
+  font-weight: bold;
+}
+
+.small-text {
+  font-size: 18px;
+  color: #e5e7eb;
+  margin: auto;
+}
+
+.button-two {
+  margin: auto;
+  margin-inline-start: 200px;
+  padding: 5px 22px;
+  border: 2px solid white;
+  color: #f9faf8;
+  border-radius: 5px;
+  font-weight: 550;
+
+}
+
+/* Footer Div */
+.footer {
+  background-color: #1f2937;
+  display: flex;
+  height: 100px;
+}
+
+.footer-text {
+  color: #e5e7eb;
+  margin: auto;
+  font-size: 18px;
+}
+
 a {
   text-decoration: none;
   color: #e5e7eb;
